<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/barnehage1" />

    <TextView
        android:id="@+id/fylke_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_img"
        android:padding="16dp"
        android:text="@string/fylke_string" />

    <Spinner
        android:id="@+id/fylke_spinner"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_img"
        android:layout_alignBottom="@id/fylke_txt"
        android:layout_toEndOf="@id/kommune_txt"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/kommune_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fylke_txt"
        android:padding="16dp"
        android:text="@string/kommune_string" />

    <Spinner
        android:id="@+id/kommune_spinner"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fylke_txt"
        android:layout_alignBottom="@id/kommune_txt"
        android:layout_toEndOf="@+id/kommune_txt"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/vis_kommune_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kommune_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/vis_kommuner_string" />

    <Button
        android:id="@+id/vis_kart_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vis_kommune_knapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/vis_i_narheten" />


</RelativeLayout>